# Rust-WASM-Algorithm-Visualiser

./: Cargo.toml  README.md  Trunk.toml  index.html
docs/: Algorithm-Visualiser-8e024f2f5b925c62.js  Algorithm-Visualiser-8e024f2f5b925c62_bg.wasm  Algorithm-Visualiser-dd2c53248497280f.js  Algorithm-Visualiser-dd2c53248497280f_bg.wasm  Algorithm-Visualiser.js  Algorithm-Visualiser_bg.wasm  index.html
src/: app.rs  main.rs
src/components/: app.rs  common.rs  mod.rs
src/components/sorting/: merge_sort.rs
