[package]
name = "Algorithm-Visualiser"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = {version = "0.8.2", features = ["csr"]}
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
wasm-bindgen = "0.2.100"
tokio = {version = "1.46.1", features = ["time"]}
log = "0.4.27"
gloo-timers = {version = "0.3.0", features = ["futures"]}
console_log = "1.0.0"
async-recursion = "1.1.1"
